# flask-confluent-kafka

./: pyproject.toml
src/flask_confluent_kafka/: core.py
