[project]
name = "flask-confluent-kakfa"
version = "0.1.0"
description = "A simple Flask extension for integrating Confluent Kafka."
authors = [{name = "River", email = "vicente.marcal@gmail.com"}]
license = {text = "GPL+v3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka>=2.11.1",
]
