[project]
name = "flask-confluent-kafka"
version = "0.1.1"
description = "A simple Flask extension for integrating Confluent Kafka."
authors = [{name = "River", email = "vicente.marcal@gmail.com"}]
license = {text = "GPL+v3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "confluent-kafka",
]


[project.scripts]
flask-confluent-kafka = "flask-confluent-kafka:flask_confluent_kafka" 

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
]
